--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,9 @@ a {
 
 .nav-tel {
   display: flex;
-  margin-left: 20px;
+  justify-content: center;
+  background-color: wheat;
+  padding: 5px;
 }
 
 .nav-item {
